# TLE

./: .gitignore  LICENSE  README.md  __main__.py  bot-run  pyproject.toml  requirements.txt  run.sh  start
data/db/: cache.db  user.db
tle/: __main__.py  constants.py
tle/cogs/: cache_control.py  codeforces.py  contests.py  cses.py  duel.py  graphs.py  handles.py  logging.py  meta.py  starboard.py  tournament.py
tle/util/: cache_system2.py  codeforces_api.py  codeforces_common.py  cses_scraper.py  discord_common.py  events.py  font_downloader.py  graph_common.py  paginator.py  table.py  tasks.py
tle/util/db/: cache_db_conn.py  user_db_conn.py
tle/util/ranklist/: ranklist.py  rating_calculator.py
