[tool.poetry]
name = "TLE"
version = "0.1.0"
description = ""
authors = ["meooow25 <soumiksarkar.3120@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.1"
seaborn = "^0.9.0"
lxml = "^4.3"
pillow = "^7.2.0"
pycairo = "^1.19.1"
PyGObject = "^3.34.0"
aiocache = "^0.11.1"
cairosvg = "^2.4.2"
achallonge = {git = "https://github.com/Groverkss/achallonge", rev = "master"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
